@startuml domain_model
title Chatlas class diagram (high level)

package "domain" {
  class RawChatFile {
    + fileName : String
    + jsonContent : String
  }

  class ChatExport {
    + name : String
    + type : String
    + id : Long
    + messages : List<Message>
  }

  class Message {
    + id : Long
    + type : String
    + date : Instant
    + from : String
    + fromId : String
    + textEntities : List<TextEntity>
  }

  class TextEntity {
    + type : String
    + text : String
  }

  class Participant {
    + fromId : String
    + displayName : String
  }

  class Mention {
    + mentionText : String
  }

  class ChatAnalysisResult {
    + participants : Set<Participant>
    + mentions : Set<Mention>
    + getParticipantsCount() : int
    + getMentionsCount() : int
    + getTotalCount() : int
  }

  abstract class ReportResult {
    + fileName() : String
  }

  class ReportTextResult {
    + fileName() : String
    + text() : String
  }

  class ReportExcelResult {
    + fileName() : String
    + excelBytes() : byte[]
    + excelFileName() : String
  }
}

package "telegram" {
  class ChatlasBot {
    +consume(update : Update)
  }

  class ChatProcessingService {
    +process(file : RawChatFile) : ReportResult
  }
}

package "parser" {
  interface ChatExportParser {
    +parse(file : RawChatFile) : ChatExport
  }
  class ChatExportParserImpl
}

package "analysis" {
  interface ChatAnalyzer {
    +analyze(export : ChatExport) : ChatAnalysisResult
  }
  class ChatAnalyzerImpl
}

package "export" {
  interface ReportRenderer {
    +render(result : ChatAnalysisResult, fileName : String) : ReportResult
  }
  class ReportRendererImpl
}

class ChatlasApplication {
  +main(args : String[])
}

' Связи между классами

ChatlasApplication --> ChatlasBot
ChatlasBot --> ChatProcessingService

ChatProcessingService --> ChatExportParser
ChatProcessingService --> ChatAnalyzer
ChatProcessingService --> ReportRenderer

ChatExportParser --> RawChatFile
ChatExportParser --> ChatExport

ChatExport "1" *-- "*" Message : contains
Message "1" *-- "*" TextEntity : contains

ChatAnalyzer --> ChatExport
ChatAnalyzer --> ChatAnalysisResult
ChatAnalysisResult "1" o-- "*" Participant
ChatAnalysisResult "1" o-- "*" Mention

ReportRenderer --> ChatAnalysisResult
ReportRenderer --> ReportResult : returns
ReportResult <|-- ReportTextResult : extends
ReportResult <|-- ReportExcelResult : extends

@enduml
